--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="Global.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GlobalM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
